--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,9 @@ autopep8 = "*"
 django = "*"
 pillow = "*"
 python-dotenv = "*"
+django-filter = "*"
+django-storages = "*"
+boto3 = "*"
 
 [requires]
 python_version = "3.9"
