--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,8 @@ python-dotenv = "*"
 django-filter = "*"
 django-storages = "*"
 boto3 = "*"
+gunicorn = "*"
+whitenoise = "*"
 
 [requires]
 python_version = "3.9"
