--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ botocore==1.19.59
 Django==3.1.5
 django-filter==2.4.0
 django-storages==1.11.1
+gunicorn==20.0.4
 jmespath==0.10.0
 Pillow==8.1.0
 python-dateutil==2.8.1
@@ -13,3 +14,4 @@ s3transfer==0.3.4
 six==1.15.0
 sqlparse==0.4.1
 urllib3==1.26.2
+whitenoise==5.2.0
